# AdventOfCode

./: .gitignore  README.md
2019/Python/: puzzle_runner.py  requirements.txt
2020/Python/: puzzle_data.py  puzzle_runner.py  requirements.txt  run.cmd
2021/Cs/: AdventOfCode2021.sln
2021/Rust/day21/: Cargo.toml
2021/Rust/day21/src/: main.rs
2022/Cs/: AdventOfCode2022.sln
2023/Cs/: AdventOfCode2023.sln
2024/AdventOfCode2024/: AdventOfCode2024.sln
Python/: advent.py  day1.py  puzzle_data.py  puzzle_runner.py
Python/runners/: computer.py  day1.py  day2.py  day3.py  day5.py  template.py
Python/utils/: log_init.py
Rust/day01/: Cargo.toml
Rust/day06/: Cargo.toml
Rust/day08/: Cargo.toml
Rust/day13/: Cargo.toml
Rust/day16/: Cargo.toml
Rust/day17/: Cargo.toml
Rust/day18/: test7.txt  test9.txt
Rust/day20/: test.txt  test2.txt
Rust/day21/: Cargo.toml  script.txt
day01/src/: main.rs
day02/: Cargo.toml
day02/src/: main.rs
day03/: Cargo.toml
day03/src/: main.rs
day04/: Cargo.toml
day04/src/: main.rs
day05/: Cargo.toml
day05/src/: main.rs
day06/src/: main.rs
day07/: Cargo.toml
day07/src/: main.rs
day08/src/: main.rs
day09/src/: main.rs
day10/: Cargo.toml
day10/src/: main.rs
day11/: Cargo.toml
day11/src/: main.rs
day12/: Cargo.toml
day13/: Cargo.toml
day14/: Cargo.toml
day15/: Cargo.toml
day18/: Cargo.toml
day18/src/: grid.rs  iterators.rs  main.rs
day19/: Cargo.toml
day20/: Cargo.toml  test4.txt
day21/: out.txt  script.txt
day22/: Cargo.toml
day23/: Cargo.toml
day24/: Cargo.toml
(+300 files in other folders)
