[package]
name = "day18"
version = "0.1.0"
authors = ["Nicolas Deslandes <ndeslandes@live.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = "0.2.8"
kernel32-sys = "0.2.2"
linked_hash_set = "0.1.3"
log = "0.4"
simple_logger = "1.6"