[package]
name = "day21"
version = "0.1.0"
authors = ["Nicolas Deslandes <ndeslandes@live.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
simplelog = "^0.10.0"
itermore = "0.1.0"
itertools = "0.8.0"